src/test/rustdoc-ui/intra-doc/email-address-localhost.stderr
error: unknown disambiguator `hello`
  --> $DIR/email-address-localhost.rs:3:18
   |
LL | //! Email me at <hello@localhost>.
   |                  ^^^^^
   |
note: the lint level is defined here
  --> $DIR/email-address-localhost.rs:1:9
   |
LL | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(rustdoc::broken_intra_doc_links)]` implied by `#[deny(warnings)]`

error: aborting due to previous error

